# oox-rs

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md
src/: error.rs  lib.rs  update.rs  xml.rs  xsdtypes.rs
src/docx/: mod.rs  package.rs  resolvedstyle.rs
src/docx/wml/: document.rs  drawing.rs  footnotes.rs  mod.rs  numbering.rs  settings.rs  simpletypes.rs  styles.rs  table.rs  util.rs
src/pptx/: document.rs  mod.rs  package.rs
src/pptx/pml/: animation.rs  presentation.rs  slides.rs  util.rs
src/shared/: docprops.rs  mod.rs  relationship.rs  sharedtypes.rs
src/shared/drawingml/: audiovideo.rs  colors.rs  coordsys.rs  core.rs  diagrams.rs  mod.rs  picture.rs  shapedefs.rs  shapeprops.rs  sharedstylesheet.rs  simpletypes.rs  styles.rs  util.rs
src/shared/drawingml/text/: bodyformatting.rs  bullet.rs  mod.rs  paragraphs.rs  runformatting.rs
tests/: integration_test.rs  presentation.xml
