[package]
name = "oox"
version = "0.1.0"
edition = "2024"
description = "Open Office XML file format deserializer"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
keywords = ["office", "pptx", "ppt", "docx", "doc"]
license = "MIT"
repository = "https://github.com/dam4rus/oox-rs.git"
homepage = "https://github.com/dam4rus/oox-rs"
readme = "README.md"
exclude = [
    "tests/sample.pptx",
    "tests/sample.docx",
    "tests/presentation.xml",
]

[dependencies]
quick-xml = "0.39.2"
zip = "8.2.0"
log = "0.4.29"
strum = "0.28.0"
strum_macros = "0.28.0"
regex = "1.12.3"

[dev-dependencies]
simple_logger = "1.4.0"

[features]
docx = []
pptx = []
all = [ "docx", "pptx" ]
