[package]
name = "oox"
version = "0.1.0"
edition = "2024"
description = "Open Office XML file format deserializer"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
keywords = ["office", "pptx", "ppt", "docx", "doc"]
license = "MIT"
repository = "https://github.com/dam4rus/oox-rs.git"
homepage = "https://github.com/dam4rus/oox-rs"
readme = "README.md"
exclude = ["tests/sample.pptx", "tests/sample.docx", "tests/presentation.xml"]

[dependencies]
quick-xml = "0.40.1"
zip = { version = "8.6.0", default-features = false, features = [
    "deflate-flate2",
] }
flate2 = { version = "1.1.9" } # need to be added for the deflate-flate2 feature
regex = { version = "1.12.3", default-features = false, features = ["std"] }
strum = { version = "0.28", features = ["derive"] }
log = "0.4.32"

[features]
docx = []
pptx = []
all = ["docx", "pptx"]
